Add custom themes, add message collapse,  jemalloc docker, recptcha option (#1)
* adding pikachu default theme

* link to the right version of the code

* update to 2.3.1 rc2 and add jigglypuff theme

* change jigglypuff to default and add another theme

* domain blocking as rake task

* minor rubocop

* verify severity

* whoops

* enable search

* es

* es

* newrelic

* adding tor for onion peering

* goto ruby 2.5.1

* go back to ruby 2.4

* netwerx

* i2p support

* i2p is a wash

* F O N T S

* make sure different version

* changing link for when registration is closed

* recaptcha support

* mastodon is now on newer node

* blah

* tag them differentlly

* blah

* add new relic config

* bleh

* new themes and new docker

* new themes and new docker

* shrink them toots

* fix collapse

* I am bad at the docker

* matching upstream

* update collapse to be a configable setting

* security fix plus latest fixes

* add a little more head room

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -235,6 +235,7 @@
 
 .dropdown-menu {
   position: absolute;
+  transform-origin: 50% 0;
 }
 
 .invisible {
@@ -697,7 +698,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding-top: 2px;
-  color: $primary-text-color;
 
   &:focus {
     outline: 0;
@@ -1014,31 +1014,15 @@
   align-items: center;
   display: flex;
   margin-top: 8px;
-
-  &__counter {
-    display: inline-flex;
-    margin-right: 11px;
-    align-items: center;
-
-    .status__action-bar-button {
-      margin-right: 4px;
-    }
-
-    &__label {
-      display: inline-block;
-      width: 14px;
-      font-size: 12px;
-      font-weight: 500;
-      color: $action-button-color;
-    }
-  }
 }
 
 .status__action-bar-button {
+  float: left;
   margin-right: 18px;
 }
 
 .status__action-bar-dropdown {
+  float: left;
   height: 23.15px;
   width: 23.15px;
 }
@@ -1653,22 +1637,6 @@ a.account__display-name {
 
   ul {
     list-style: none;
-  }
-
-  &.left {
-    transform-origin: 100% 50%;
-  }
-
-  &.top {
-    transform-origin: 50% 100%;
-  }
-
-  &.bottom {
-    transform-origin: 50% 0;
-  }
-
-  &.right {
-    transform-origin: 0 50%;
   }
 }
 
@@ -3783,14 +3751,7 @@ a.status-card.compact:hover {
   border-radius: 4px;
   margin-left: 40px;
   overflow: hidden;
-
-  &.top {
-    transform-origin: 50% 100%;
-  }
-
-  &.bottom {
-    transform-origin: 50% 0;
-  }
+  transform-origin: 50% 0;
 }
 
 .privacy-dropdown__option {
@@ -3860,10 +3821,6 @@ a.status-card.compact:hover {
         color: $primary-text-color;
       }
     }
-  }
-
-  &.top .privacy-dropdown__value {
-    border-radius: 0 0 4px 4px;
   }
 
   .privacy-dropdown__dropdown {
@@ -5316,13 +5273,13 @@ noscript {
       & > .icon-button.close {
         will-change: opacity transform;
         transition: opacity $duration * 0.5 $delay,
-                    transform $duration $delay;
+        transform $duration $delay;
       }
 
       & > .compose__action-bar .icon-button {
         will-change: opacity transform;
         transition: opacity $duration * 0.5 $delay + $duration * 0.5,
-                    transform $duration $delay;
+        transform $duration $delay;
       }
     }
   }
